# mini-notes-fullstack

./: .gitignore  README.md  interview-excercise-instructions-v2.md
.github/agents/: Frontend.agent.md  python.agent.md
backend/: pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/middleware/: error_handler.py
backend/src/app/models/: __init__.py  note.py
backend/src/app/routes/: notes.py
backend/src/app/services/: note_service.py
backend/tests/: conftest.py  test_health.py  test_note_service.py  test_notes.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  NoteCard.tsx  NoteForm.tsx  NoteList.tsx  SearchBar.tsx
frontend/src/store/: notesSlice.ts  store.ts
frontend/src/theme/: theme.ts
frontend/src/types/: note.ts
